# LinxCoreModel

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.py
cmake/: GlobalSettings.cmake  SOCSetup.cmake  SOCSetupGeneric.cmake  SOCSetupNewGeneric.cmake
codec/generatedfiles/: decode-block16.cpp  decode-block32.cpp  encode-block16.cpp  encode-block32.cpp  encode-block64.cpp
common/: CMakeLists.txt  Common.h
common/DataStruct/: BaseROB.h  BiMap.h  CommonData.h  Defines.h  MachineId.h  RingQ.h  VecData.h  base_stats.h
common/utils/: LogInfo.h  ParseArgs.h  error.cpp  error.h  lazy.h  log.h  obj_print.h  reporter.cpp  reporter.h  util.h
configs/: CMakeLists.txt  ConfigInput.h  DFX.toml  Jcore.toml  SoftCore.toml  Trace.toml  bctrl.toml  bfu.toml  bridgetable.toml  config.h  core.toml  cube.toml  doubleCV.conf  doubleCVNoRing.conf  fakebcc.toml  iex.toml  ifu.toml  l1.toml  l2.toml  lsu.toml  memcore.toml  mlsu.toml  mtc_l1.toml  mtccore.toml  spe.toml  stack.toml  tilebridge.toml  tmu.toml  vectorLite.conf  vectorLiteCore.toml  vectorcore.toml  vpe.toml
emulator/: ArchStatus.h  CMakeLists.txt  ELF.cpp  ELF.h  ElfLoader.h  MInstFunc.h  Memory.cpp  Memory.h  SoftCore.cpp  SoftCore.h  SysCall.cpp  SysCall.h  TileReg.cpp  TileReg.h  main.cpp
emulator/engine/: AaccelssMemoryEngine.cpp  AccumulateBlockInfo.cpp  CTGenEngine.cpp  CubeEngine.cpp  OperandIO.cpp  TEPLEngine.cpp  TMAEngine.cpp
isa/: Block.cpp  Block.h  CMakeLists.txt  ISA.h  MInst.cpp  MInst.h  README.md
isa/ISACommon/: BARG.h  BlockAttribute.h  BlockHint.h  BlockType.h  BlockVerifyInfo.h  BranchType.h  DataNum.h  DataType.h  DecodeUtiles.cpp  DecodeUtiles.h  EncodeLen.h  FRM.h  GPR.h  InstGroup.h  InstInfo.h  LayOut.h  OpcodeManager.cpp  OpcodeManager.h  OperandType.h  SystemReg.h  TileInfo.h  TileOpManager.cpp  TileOpManager.h
isa/calculate/: CubeCalculate.cpp  CubeCalculate.h  FloatPointUtils.cpp  FloatPointUtils.h  MInstCalculator.cpp  MInstCalculator.h  TileOpCommonCalc.cpp  TileOpCommonCalc.h
isa/calculate/arithmetic/: Arithmetic.cpp  Arithmetic.h
isa/calculate/arithmetic_fp/: ArithmeticFP.cpp  ArithmeticFP.h
isa/calculate/atomic/: Atomic.cpp  Atomic.h
isa/calculate/bit/: Bit.cpp  Bit.h
isa/calculate/blockArgs/: BlockArgs.cpp  BlockArgs.h
isa/calculate/branch/: Branch.cpp  Branch.h
isa/calculate/cacheMaintain/: CacheMaintain.cpp  CacheMaintain.h
isa/calculate/compare/: Compare.cpp  Compare.h
isa/calculate/compare_fp/: CompareFP.cpp  CompareFP.h
isa/calculate/compound/: Compound.cpp  Compound.h
isa/calculate/convert/: Convert.cpp  Convert.h
isa/calculate/extend/: Extend.cpp  Extend.h
isa/calculate/immediate/: Immediate.cpp  Immediate.h
isa/calculate/load/: Load.cpp  Load.h
isa/calculate/maxmin/: MaxMin.cpp  MaxMin.h
isa/calculate/mov/: Mov.cpp  Mov.h
isa/calculate/multi_cycle/: MultiCycle.cpp  MultiCycle.h
isa/calculate/others/: Others.cpp  Others.h
isa/calculate/pc/: PC.cpp  PC.h
isa/calculate/reduce/: Reduce.cpp  Reduce.h
isa/calculate/setc/: Setc.cpp  Setc.h
isa/calculate/ssr/: SSR.cpp  SSR.h
isa/calculate/store/: Store.cpp  Store.h
isa/codec/: build.sh  decodetree.py  encodetree.py
isa/codec/decodefiles/: block16.decode  block32.decode  block48.decode  block64.decode
model/: CMakeLists.txt  SimSys.cpp  main.cpp
model/DFX/: BlockPipeViewInfo.h  InstTracer.cpp  InstTracer.h  PipeViewOut.cpp  PipeViewOut.h  ResVerifyManager.cpp  ResVerifyManager.h  ViewManager.cpp  ViewManager.h
model/ModelCommon/: BlockCommand.cpp  BlockCommand.h  CycleInfo.h  DelayQueue.h  LSUUtils.cpp  LSUUtils.h  LpvInfo.cpp  LpvInfo.h  ModelCommon.h  ModelEnumDefines.h  ROBID.cpp  ROBID.h  RingQueue.h  ShapeLoopInfo.h  SimInstInfo.cpp  SimInstInfo.h  SimQueue.h  TileOperand.h
model/bctrl/: BCtrl.cpp  BCtrl.h  BIFU.cpp  BIFU.h  BIssue.cpp  BIssue.h  BMDB.cpp  BMDB.h  BROB.cpp  (+5 more)
runtime/: CMakeLists.txt
runtime/co_rt/: README.md  co.c
runtime/co_rt/tests/: Makefile  co-test.h  main.c
runtime/ddg_rt/: CMakeLists.txt  README.md
runtime/ddg_rt/include/: Graph.h  Runtime.h  blockingconcurrentqueue.h  concurrentqueue.h  multi_pred_1786.h  multi_pred_215.h  multi_pred_llama.h  multi_pred_llama_subgraph.h  single_pred_11681.h  single_pred_253.h  single_pred_2874.h  single_pred_7.h
runtime/ddg_rt/src/: Runtime.cpp  main.cpp
runtime/linx-runtime/: CMakeLists.txt
runtime/linx-runtime/include/: common.h  concurrent_queue.h  lxatomic.h  lxdbg.h  lxgqm.h  lxsmt.h
runtime/linx-runtime/src/: concurrent_queue.c  lxatomic.c  lxgqm.c  lxsmt.c
runtime/linx-runtime/testcases/: start.s
runtime/linx-runtime/testcases/aicpu_scheduler/: CMakeLists.txt
runtime/linx-runtime/testcases/aicpu_scheduler/data/: csr_test.h  llama.h  llama_layer.h
runtime/linx-runtime/testcases/aicpu_scheduler/src/: aicpu_scheduler.c
runtime/linx-runtime/testcases/aicpu_scheduler/tools/: eval_ideal_cycles.py  header2json.c  llama.txt  llama_layer.txt
runtime/linx-runtime/testcases/graph_bfs/: CMakeLists.txt
runtime/linx-runtime/testcases/graph_bfs/data/: csr_test.h
runtime/linx-runtime/testcases/graph_bfs/include/: graph.h  graph_bfs.h
runtime/linx-runtime/testcases/graph_bfs/src/: graph.c  graph_bfs.c  main.c
runtime/model_rt/: model_rt.cpp  model_rt.h
scripts/: README.md  anaHotSeq.py  anaSIMT.py  block_load_json.py  blockisa_build.sh  build.sh  check_run_test_result.sh  config_generic_soc_4_die.csh  coverage.py  cycle_csv.py  device_compile.py  draw_sum_histogram.py  exePerf.py  performance_analyzer.conf  performance_analyzer.py  runPipeView.py  run_test.sh  runtest.sh  ur_depend_statistic.py  ur_value_statistic.py
softfloat/: CMakeLists.txt
softfloat/example/: example.cpp
softfloat/fpu/: softfloat-parts-addsub.c.inc  softfloat-parts.c.inc  softfloat-specialize.c.inc  softfloat.c
softfloat/include/: bswap.h  host-utils.h  misc.h  softfloat-helpers.h  softfloat-macros.h  softfloat-types.h  softfloat.h
tests/: CMakeLists.txt  README.md
tests/minst_test/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  gen_configs.py
tools/trace_logger/: TraceLogger.cpp  TraceLogger.h
(+399 files in other folders)
